<resources>
    <string name="app_name">NoWaste</string>
    <string name="title_activity_navigation_drawer">NavigationDrawerActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="nav_menu_sez1">Generale</string>
    <string name="nav_menu_home">Home</string>
    <string name="nav_menu_curiosita">Curiosità</string>
    <string name="nav_menu_calendario">Calendario</string>
    <string name="nav_menu_luoghi">Luoghi</string>
    <string name="nav_menu_sez2">Info</string>
    <string name="nav_menu_contattaci">Contattaci</string>
    <string name="nav_menu_impostazioni">Impostazioni</string>

    <string name="openNavDrawer">Navigation Drawer Open</string>
    <string name="closeNavDrawer">Navigation Drawer Close</string>

    <string name="title_activity_tab_ticket">TabTicketActivity</string>
    <string name="tab_text_1">Aperti</string>
    <string name="tab_text_2">Chiusi</string>
    <string name="tab_text_3">Report</string>
</resources>