<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item android:title="@string/nav_menu_sez1">
            <menu>
                <item android:id="@+id/nav_invisible"
                    android:checkable="true"
                    android:checked="false"
                    android:visible="false"/>
                <item
                    android:id="@+id/nav_home"
                    android:icon="@drawable/ic_home"
                    android:checkable="true"
                    android:checked="true"
                    android:title="@string/nav_menu_home" />
                <item
                    android:id="@+id/nav_curiosita"
                    android:icon="@drawable/ic_emoji_objects"
                    android:checkable="true"
                    android:checked="false"
                    android:title="@string/nav_menu_curiosita"/>
                <item
                    android:id="@+id/nav_calendario"
                    android:icon="@drawable/ic_date_range"
                    android:checkable="true"
                    android:checked="false"
                    android:title="@string/nav_menu_calendario" />
                <item
                    android:id="@+id/nav_luoghi"
                    android:icon="@drawable/ic_place"
                    android:checkable="true"
                    android:checked="false"
                    android:title="@string/nav_menu_luoghi"/>
            </menu>
        </item>

        <item android:title="@string/nav_menu_sez2">
            <menu>
                <item
                    android:id="@+id/nav_contattaci"
                    android:icon="@drawable/ic_forum"
                    android:checkable="true"
                    android:checked="false"
                    android:title="@string/nav_menu_contattaci" />
                <item
                    android:id="@+id/nav_impostazioni"
                    android:icon="@drawable/ic_miscellaneous"
                    android:checkable="true"
                    android:checked="false"
                    android:title="@string/nav_menu_impostazioni"/>
            </menu>
        </item>
    </group>
</menu>